split the data point and the heartbeat point